code-server/4-deploy-code-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: code-server
  namespace: code-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: code-server
  template:
    metadata:
      labels:
        app: code-server
    spec:
      containers:
        - name: code-server
          image: ghcr.io/coder/code-server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config
              mountPath: /home/coder/.config/code-server
            - name: data
              mountPath: /home/coder/project
      volumes:
        - name: config
          configMap:
            name: code-server-config
        - name: data
          persistentVolumeClaim:
            claimName: code-server-pvc
