code-server/5-service-code-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: code-server
  namespace: code-server
spec:
  selector:
    app: code-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
