code-server/6-ingress-code-server.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: code-server
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: "code.cedot-lab.work"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: "code-server"
                port:
                  number: 8080
